# w2schar-mini

./: .gitignore  CLAUDE.md  README.md  RESEARCH_JOURNAL.md  _quarto.yml  conftest.py  custom.scss  index.html  justfile  main.qmd  post.md  pseudocode.md  pyproject.toml  references.bib
.agents/commands/: audit-run.md  narrate-run.md  queue-and-watch.md
.claude/commands/: audit-run.md  narrate-run.md  queue-and-watch.md
.claude/memory/: MEMORY.md  afk-dont-ask-just-act.md  attractor-is-seat-driven.md  dogfood-exit-interview.md  gate-floor-exceeds-per-axis-pool.md  guide-dont-prescribe.md  pissa-frozen-init-lr.md  pool-stems-must-afford-axis.md  prefer-in-repo-docs.md  probe-for-wisdom-not-action.md  rej-collapse-is-composition.md
.claude/plans/: fake-student-gym-and-prompt-rewrite.md
data/: atari_study2_raw.csv  machiavelli_summaries.jsonl  probe_gym_questions.jsonl  scenario_screen_kept.json
docs/: 2026-06-25_artificialanalysis_open_weights_index.md  2026_forethought_on_the_importance_of_ai_character.md  character_inspirations.md  codex_review_impl.md  codex_review_pseudo.md  handoff_scenario_lib_contribution.md  how_to_rewrite_pairs.md  how_to_write_personas.md  human_journal.md  paper_deepvalues.md  personas_kept.md  scenarios_first_person_act.jsonl  steering_direction.md
docs/research/: inspect-ai-capabilities.md
docs/reviews/: 20260621_probe_redesign_synthesis.md  20260621_probe_review_deepseek.md  20260621_probe_review_gemini.md  20260621_probe_review_grok.md  readme_deepseek.err  readme_deepseek.jsonl  readme_deepseek.md  readme_gemini.jsonl  readme_gemini.md  readme_gpt54.md
docs/spec/: 2026-07-01_scenario_axis_prior.md  20260528_prompt_rewrite_to_guide.md  20260606_dataset_prompt_pool.md  20260612_final_subagent_review.md  20260612_persona_validation_qwen27b_pi.md  20260612_weak_select_harness.md  20260613_direct_openrouter_persona_judge.md  20260614_eval_and_plot_probe_label.md  20260614_tinymfv_alignment.md  20260616_workshop_paper_plan.md  20260617_t6_probe_redesign.md  20260621_persona_axis_ladder.md  20260621_probe_diversity.md  20260624_prompt_forethought_rewrite.md
docs/uat/: A-pseudocode.md  B1-scaffold.md  B10-pytest.md  B11-codex-impl-review.md  B2-adapter.md  B3-train.md  B4-gen.md  B5-probes.md  B6-dialogue-cscan.md  B7-state-pipeline-cli.md  B8-agent.md  B9-smoke.md  C-real-smoke.md  D-codex-post-review.md  E-wsl-mechanism-diff.md  F-curation-guardrails-review.md
scripts/: adv_fixture.py  agent_thoughts.py  apply_prompt_screen.py  bake_persona_menu.py  build_pool.py  c_depth_sweep.py  c_sweep_eval.py  depth_judge.py  diag_judge.py  dogfood_round.py  export_persona_template_stats.py  export_pool_axis_review.py  gen_gym_fixture.py  gym_judge_AB.py  gym_question.py  gym_rate_pairs.py  ipsative_compass.py  judgment_gym.py  log_lengths.py  plot_seeds.py  probe_gym.py  probe_persona_coherence.py  probe_threshold.py  qwen_template_ab.py  qwen_think_ab.py  rate_gym.py  run_3round.sh  run_with_tinymfv_env.sh  select_screened_scenarios.py  smoke.sh  smoke_pissa.sh  summarise_machiavelli.py  t7_seed_divergence.py  validate_defer_persona.py  validate_persona_axes_openrouter.py  validate_persona_pool.py  validate_pool.py
src/csm/: __init__.py  adapter.py  agent.py  c_scan.py  cli.py  config.py  dialogue.py  eval.py  gen.py  history.py  pipeline.py  plot.py  prompts.py  prompts_pool.py  state.py  train.py
src/csm/ws/: __init__.py  adapter.py  bake.py  c_scan.py  history.py  train.py
tests/: test_smoke.py
tests/fixtures/: judgment_gym.jsonl  judgment_gym_adv.jsonl
tests/fixtures/fake_student/: interview_post.json  interview_pre.json  real_seed.md
