[project]
name = "w2schar-mini"
version = "0.1.0"
description = "Minimal weak-to-strong iterated character steering — fixed-axis (authority), 50 pairs, react-agent teacher."
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4",
    "transformers>=4.45",
    "einops>=0.8",
    "jaxtyping>=0.2.36",
    "loguru>=0.7",
    "safetensors>=0.4",
    "tqdm>=4.66",
    "tabulate>=0.9",
    "tyro>=0.9",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "inspect-ai>=0.3.50",
    "accelerate>=0.34",
    # 4-bit nf4 loading for 27b+ models (BitsAndBytesConfig).
    "bitsandbytes>=0.43",
    # OpenRouter provider in inspect-ai goes through the openai SDK.
    "openai>=1.0",
    # Post-hoc eval + plot.
    "numpy>=1.26",
    "plotly>=5.20",
    "tiny-mfv",
]

[tool.uv.sources]
tiny-mfv = { path = "/workspace/lite/tinymfv", editable = true }

[project.scripts]
csm = "csm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/csm"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
exclude-newer = "5 days"
